Fix news feed stuck to the bottom.

--- a/framebuzz/static/framebuzz/profiles/sass/screen.scss
+++ b/framebuzz/static/framebuzz/profiles/sass/screen.scss
@@ -489,10 +489,6 @@ div.marketing-content {
                                 padding: 5px;
                                 width: 96%;
 
-                                &:last-child {
-                                    margin-bottom: 0;
-                                }
-
                                 div.user-wrapper {
                                     @include border-radius(3px, 3px);
                                     background-color: white;
